--- a/styles.css
+++ b/styles.css
@@ -284,3 +284,12 @@ li {
     font-weight: 500;
     color: rgb(255, 111, 0);
 }
+.logo a:hover {
+    transition: all 0.3 ease-in-out;
+    color: #6cbde1;
+}
+.logo a span:hover{
+    transition: all 0.3 ease-in-out;
+    color:rgb(225, 25, 215);
+}
+
