--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ li {
     font-size: 52px;
     font-weight: 700;
     color: #fff;
+
 }
 .category {
     display: flex;
@@ -152,10 +153,11 @@ li {
     max-width: 1180px;
     width: 100%;
 }
-.row-1, .row-2, .row-3 {
+.row-1, .row-2, .row-3, .n {
     display: flex;
     flex-direction: row;
     width: 100%;
+    justify-content:center ;
 }
 .sanpham-tshirt {
     border: 1px solid #666;
@@ -294,4 +296,62 @@ li {
 }
 .sanpham {
     background-color: #F5F5F5;   
+}
+.list-menu {
+
+}
+.m   {
+    border: 1px solid #666;
+    max-width: 360px;
+    width: 100%;
+    height: 280px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 10px;
+    border-radius: 10px;
+    margin-bottom: 80px;
+    padding: 10px 15px;
+}
+.m img {
+    width: 150px;
+    height: 150px;
+}
+.m img:hover {
+    transform: translateY(-20%);
+    transition: all 0.3s ease;
+}
+.m:hover {
+    transform: translateY(-20%);
+    transition: all 0.5s ease-in-out;
+    box-shadow: #175976;
+}
+.mua {
+    b   ackground-color: rgb(255, 111, 0);
+    border: 1px solid rgb(255, 111, 0);
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    border-radius: 5px;
+    padding: 8px 10px;
+    margin-bottom: 10px;
+    position: absolute;
+    bottom: 40px;
+    transform: translateY(50%)
+}
+.mua :hover {
+    background-color: orange;
+    border: 1px solid orange;
+    color: #fff;
+    transition: all 0.3s ease-in-out;
+}
+.column-left i {
+    margin: 10px;
+    width: 30px;
+   font-size: 25px;
+   justify-content: center;
+}
+.column-left i:hover {
+    transition: all 0.3s ease-in-out;
+    color: red;
 }
